# Meu-album-da-copa-

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
backend/: .env.example  README.md  requirements.txt  run.py
backend/app/: album_copa_2026.db  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  catalog.py  collection.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/api/: api_client.dart  api_exception.dart
lib/core/config/: app_config.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/data/: catalog_store.dart
lib/data/mock/: mock_country_repository.dart  mock_data.dart  mock_player_repository.dart
lib/data/repositories/: api_country_repository.dart  api_player_repository.dart  (+2 more)
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_pt.dart  app_pt.arb  app_strings.dart
lib/models/: album_badge.dart  collection_stats.dart  country.dart  owned_sticker.dart  player.dart  player_position.dart  user_profile.dart
lib/providers/: album_provider.dart  auth_provider.dart  collection_provider.dart  locale_provider.dart  theme_provider.dart  user_provider.dart
lib/screens/: bootstrap_gate.dart
lib/widgets/: app_drawer.dart  badge_tile.dart  player_avatar.dart  search_field.dart  sticker_actions_sheet.dart  sticker_tile.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
