[project]
name = "meu-album-da-copa"
version = "0.1.0"
description = "Backend FastAPI + SQLite do álbum de figurinhas da Copa do Mundo 2026"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]
